--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -208,9 +208,11 @@
 
     }
   </script>
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
     integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
+
 </head>
 
 <body>
@@ -219,8 +221,8 @@
 
 
     <form method="get" class="form-group">
-      <div class="searchBar-wrapper">
-        <div class="searchBar">
+      <div class="searchBar-wrapper fade-in-top animation-delay-2">
+        <div class="searchBar ">
 
           <h1>Find perfect study space in NYC</h1>
           <div class="search-wrapper">
@@ -247,7 +249,7 @@
 
         </div>
       </div>
-      <div id="map"></div>
+      <div id="map" class="fade-in animation-delay-5"></div>
       <div class="container">
         <div class="modal fade" id="filterModal" tabindex="-1" role="dialog" aria-labelledby="filterModal"
           aria-hidden="true">
@@ -336,7 +338,7 @@
                       <div class=" btn btn-secondary" onclick="clearFilter()"> Clear Filters
                       </div>
                     </div>
-                      <div class="form-check 311-switch my-4">
+                    <div class="form-check 311-switch my-4">
                       <input name="311_check" class="form-check-input" type="checkbox" style="width:15px;height:20px; "
                         id="flexSwitchCheck" />
                       <label for="311_check">
