Bug Fix : Issue 149, user can submit a review ratings without review description

--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -112,7 +112,7 @@
                             <div>
                                 <form method="post">
                                     {% csrf_token %}
-                                    <input type="text" name="review" required="required" placeholder="Your review"
+                                    <input type="text" name="review"  placeholder="Your review"
                                         class="review-input" />
                                     <br />
                                     <div class="range">
