--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -127,7 +127,7 @@
                         <h2><i class="fas fa-edit me-2"></i>Post your review</h2>
                         <form method="post">
                             {% csrf_token %}
-                            <textarea placeholder="Your review..." name="review" required></textarea>
+                            <textarea placeholder="Your review..." name="review"></textarea>
                             <br />
                             <div class="range">
                                 <p>0</p>
