--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -42,7 +42,7 @@
 
               <div class="input-group input-group-lg mb-3">
                 <div class="input-group-append">
-                  <span class="input-group-text"><i class="fas fa-key"></i></span>
+                  <span class="input-group-text"><i class="fas fa-lock"></i></span>
                 </div>
 
                 <input type="password" name="password" placeholder="Password" class="form-control" />
