--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -35,19 +35,19 @@
               </div>
               <div class="input-group mb-2">
                 <div class="input-group-append">
-                  <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+                  <span class="input-group-text"><i class="fas fa-envelope"></i></i></span>
                 </div>
                 {{form.email}}
               </div>
               <div class="input-group mb-2">
                 <div class="input-group-append">
-                  <span class="input-group-text"><i class="fas fa-key"></i></span>
+                  <span class="input-group-text"><i class="fas fa-lock"></i></span>
                 </div>
                 {{form.password1}}
               </div>
               <div class="input-group mb-2">
                 <div class="input-group-append">
-                  <span class="input-group-text"><i class="fas fa-key"></i></span>
+                  <span class="input-group-text"><i class="fas fa-lock"></i></span>
                 </div>
                 {{form.password2}}
               </div>
