--- a/static/css/login.css
+++ b/static/css/login.css
@@ -80,6 +80,9 @@ input[type="checkbox"] {
 .login_btn:focus {
   box-shadow: none;
   outline: 0px;
+  background: rgb(255, 140, 51);
+  color: white !important;
+  border: none;
 }
 
 .login_container {
@@ -88,26 +91,30 @@ input[type="checkbox"] {
 
 .input-group input {
   font-size: 30px !important;
+  border: none;
+  background-color: #f5f5f5 !important;
 }
 
 .input-group-text {
-  background: rgb(255, 163, 93);
-  color: white;
+  background: rgb(255, 255, 255);
+  color: black;
   border: 0;
   border-radius: 0.25rem 0 0 0.25rem;
   height: 100%;
+  font-size: 20px;
+  background-color: #f5f5f5 !important;
 }
 
 .input_user,
 .input_pass:focus {
   box-shadow: none;
   outline: 0px;
+  color: white;
 }
 
 .form-control:focus {
   box-shadow: none;
   outline: none;
-  border-color: black;
 }
 
 .business-option {
