--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -341,13 +341,13 @@
                       <div class=" btn btn-secondary" onclick="clearFilter()"> Clear Filters
                       </div>
                     </div>
-                    <div class="form-check 311-switch my-4">
+                    {% comment %} <div class="form-check 311-switch my-4">
                       <input name="311_check" class="form-check-input" type="checkbox" style="width:15px;height:20px; "
                         id="flexSwitchCheck" />
                       <label for="311_check">
                         <h4>No NYC 311 Complaints</h4>
                       </label>
-                    </div>
+                    </div> {% endcomment %}
                   </div>
                 </div>
               </div>
