revert profile photo to default

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -59,6 +59,11 @@
         {% endif %}
         <div class="mt-3">
             <img class="rounded-circle" height="200" width="200" src="{{ user.profile.image.url }}">
+            <form method="post">
+                {% csrf_token %}
+                <input type="hidden" name="remove_image" value="1" />
+                <input type="submit" value="Remove">
+            </form>
             <div class="">
                 <h2 class="mt-3">{{ user.username }}</h2>
                 {% if user.profile.business_account %}
