--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -62,7 +62,8 @@
             <form method="post">
                 {% csrf_token %}
                 <input type="hidden" name="remove_image" value="1" />
-                <input type="submit" value="Remove">
+                <button class="mt-3 btn btn-secondary" type="submit">Remove my photo</button>
+{#                <input type="submit" value="Remove">#}
             </form>
             <div class="">
                 <h2 class="mt-3">{{ user.username }}</h2>
