--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -38,6 +38,8 @@
                         </span></p>
                 </div>
                 {% endif %}
+
+                
                 {% if is_business and not is_verified %}
                 <div class="mt-2 mb-3">
                     <i class="fas fa-info-circle"></i>
@@ -68,6 +70,11 @@
                 <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#imageModal">
                     See photo
                 </button>
+                {% if is_owner %}
+                <a type="button" class="btn btn-light" href="/bz_update?location_id={{locationID}}">
+                    Update
+                </a>
+                {% endif %}
             </div>
         </div>
         <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
