--- a/accounts/templates/accounts/bz_update.html
+++ b/accounts/templates/accounts/bz_update.html
@@ -1,3 +1,4 @@
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,10 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="post"> 
+    <form method="post" enctype="multipart/form-data"> 
         {% csrf_token %}
-        
-         {{form}}
+        <fieldset>
+         {{bform|crispy}}
+        </fieldset>
     <button type="submit">Submit</button>
 
     </form>
