--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -29,7 +29,15 @@
 
     <div class="main">
         <div class="banner-wrapper ">
+            <!-- {% if business_info and business_info.image %}
             <img class="fade-in-top animation-delay-1" src="{{ business.image_url }}" />
+
+            {% else %} -->
+
+            <img class="fade-in-top animation-delay-1" src="{{ business.image_url }}" />
+
+            <!-- {% endif %} -->
+            
             <div class="location-info-head fade-in animation-delay-3">
                 <h1>{{ business.name }}</h1>
                 {% if is_verified %}
