--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -53,32 +53,37 @@
     const locations = {{location_list|safe}};
     /* beautify preserve:end */
 
+    // create bounds object
+    
+
     function initMap() {
-      const map = new google.maps.Map(document.getElementById("map"), {
+      var map = new google.maps.Map(document.getElementById("map"), {
         zoom: 11,
         center: {
           lat: 40.7128,
-          lng: -74.0060
+          lng: -74.0060,
         },
       });
 
       infoWindow = new google.maps.InfoWindow();
 
+      var pos;
       const useCurrentLocation = document.getElementById("useCurrentLocation");
       useCurrentLocation.addEventListener("click", () => {
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(
             (position) => {
-              const pos = {
+              pos = {
                 lat: position.coords.latitude,
                 lng: position.coords.longitude,
               };
-
-              infoWindow.setPosition(pos);
-              infoWindow.setContent(label);
-              infoWindow.open(map);
+              //infoWindow.setPosition(pos);
+              //infoWindow.setContent("");
+              
               map.setCenter(pos);
+              map.setZoom(11);
+              infoWindow.open(map);
             },
             () => {
               handleLocationError(true, infoWindow, map.getCenter());
@@ -89,7 +94,9 @@
           handleLocationError(false, infoWindow, map.getCenter());
         }
       })
-
+           
+      var bounds = new google.maps.LatLngBounds();
+      
       var markers = locations.map(function(location, i) {
         var marker = new google.maps.Marker({
           position: {'lat': location['lat'], 'lng': location['lng']},
@@ -101,15 +108,29 @@
           redirectTo = 'location?locationID=' + marker.url
           window.location.replace(redirectTo)
         });
+        // extend bounds for each marker
+        bounds.extend({'lat': location['lat'], 'lng': location['lng']})
         return marker;
       });
 
+      // fix the center marker
+      const iconBase = "https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png";
+      var userMarker = new google.maps.Marker({
+          position: map.getCenter(),
+          //label: 'ME',
+          map: map,
+          icon: iconBase
+      });
+
+      map.fitBounds(bounds);
+    
       //Add a marker clusterer to manage the markers.
       new markerClusterer.MarkerClusterer({
         map,
         markers,
+        userMarker,
       });
-    }
+    };
 
     function handleLocationError(browserHasGeolocation, infoWindow, pos) {
       infoWindow.setPosition(pos);
