--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -30,8 +30,17 @@
     <div class="main">
         <div class="banner-wrapper ">
             
+            {% if business_info and business_info.image.url %}
+
+            <img class="fade-in-top animation-delay-1" src="{{ business_info.image.url }}" />
+           
+            
+            
+            {% else %}
         
             <img class="fade-in-top animation-delay-1" src="{{ business.image_url }}" />
+
+            {% endif %}
  
             <div class="location-info-head fade-in animation-delay-3">
                 <h1>{{ business.name }}</h1>
