--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,14 @@
 <style>
+    a {
+        text-decoration: none;
+        color: black;
+
+    }
+
+    a:hover {
+        color: #808080 !important;
+    }
+
     nav {
         display: flex;
         flex-direction: row;
@@ -50,7 +60,6 @@
 
     <div class="btns">
         {% if user.is_authenticated %}
-
         <p>
             {{ request.user }}
         </p>
@@ -81,6 +90,10 @@
         </a>
 
         {% endif %}
+
+        <a href="{% url 'about' %}">
+            About
+        </a>
         {% comment %} <a href={% url 'index' %}>Search</a> {% endcomment %}
     </div>
 </nav>
