--- a/accounts/templates/accounts/about.html
+++ b/accounts/templates/accounts/about.html
@@ -29,7 +29,7 @@
             <img src="{% static 'images/about-banner.jpg' %}" alt="">
         </div>
         <div class="banner-text">
-            <h1>About Us</h1>
+            <h1>About us</h1>
         </div>
 
     </div>
