--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -83,7 +83,7 @@
                     See photo
                 </button>
                 {% if is_owner %}
-                <a type="button" class="btn btn-light" href="/bz_update?location_id={{locationID}}">
+                <a type="button" class="btn btn-light" href="/bz_update?location_id={{locationID}}" target="_blank">
                     Update
                 </a>
                 {% endif %}
